fix more UI glitches